fixed maven-related compilation error